# src/routes/auth.route.js
@@ -1,0 +1,10 @@
+import express from "express";
+import { register, login, refreshToken } from "../controllers/AuthController.js";
+
+const router = express.Router();
+
+router.post("/register", register);
+router.post("/login", login);
+router.post("/refresh-token", refreshToken);
+
+export default router;
